--- a/config/configmap/inferenceservice.yaml
+++ b/config/configmap/inferenceservice.yaml
@@ -675,7 +675,8 @@ data:
         "memoryLimit": "1Gi",
         "cpuRequest": "100m",
         "cpuLimit": "1",
-        "defaultUrl": "http://default-broker"
+        "defaultUrl": "http://default-broker",
+        "tlsSkipVerify": true
     }
 
   batcher: |-
